--- a/src/main/webapp/css/main.css
+++ b/src/main/webapp/css/main.css
@@ -178,3 +178,44 @@ textarea#memo_contents{
     background-image: url(../img/subway2.png);
     background-repeat: no-repeat;
 }
+
+TD#screen_main {
+    width: 75%;
+}
+
+TD#screen_side {
+    width: 25%;
+}
+
+span#btn_ham {
+    display: none;
+    width: 55px;
+    height: 55px;
+    background-color: white;
+    position: fixed;
+    top: 10px;
+    right: 10px;
+    color: rgb(2, 71, 120);
+    font-size: 2.4em;
+    font-weight: bolder;
+    text-align: center;
+    user-select: none;
+}
+
+@media (max-width: 1850px) {
+    TD#screen_main {
+        width: 100%;
+    }
+
+    TD#screen_side {
+        width: 350px;
+        position: fixed;
+        top: 75px;
+        right: 0;
+        display: none;
+    }
+
+    span#btn_ham {
+        display: block;
+    }
+}
