추가 main.css - 3가지 상태 반응
브라우저 화면 폭이 1500px보다 좁을 때, 1500px보다 넓고 1850px보다 좁을 때, 1850px보다 넓을

--- a/src/main/webapp/css/main.css
+++ b/src/main/webapp/css/main.css
@@ -219,3 +219,17 @@ span#btn_ham {
         display: block;
     }
 }
+
+@media (min-width: 1500px) and (max-width: 1850px) {
+    TD#screen_main {
+        width: 100%;
+    }
+    
+    TD#screen_side {
+        width: 350px;
+        position: fixed;
+        top: 75px;
+        right: 0;
+        display: inline;
+    }
+}
